[tool.poetry]
name = "calculator-bot"
version = "0.1.0"
description = ""
authors = ["Igor <igormatevosian@gmail.com>"]
readme = "README.md"
packages = [{include = "calculator_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pyodbc = "^4.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
